# nucpot

./: $TMPFILE  .env.example  .env.lightrag.example  .gitignore  .mcp.json.example  .paperclip-status-update-NFM-998.json  .schema-baseline.json  .yamllint.yml  AGENTS.md  Dockerfile.web  LICENSE  MEMORY.md  NFM-345-PHASE4.1-4.2-STATUS.md  NFM-348-API-STILL-BROKEN.md  NFM-348-BLOCKED-DISPOSITION.md  NFM-348-CEO-FINAL-ACKNOWLEDGMENT.md  NFM-348-CLOSURE.md  NFM-348-COMMENT-FOR-ISSUE.md  NFM-348-CPO-FINAL-DISPOSITION.md  NFM-348-CTO-FINAL-DISPOSITION.md  NFM-348-CTO-HEARTBEAT-SUMMARY.md  NFM-348-FINAL-ISSUE-STATUS.md  NFM-348-SESSION-SUMMARY.md  NFM-412-DISPOSITION.md  NFM-413-CLOSED-VERIFICATION.md  NFM-413-FINAL-STATUS.md  NFM-415-API-INSTRUCTION.md  NFM-415-COMMENT-POST.md  NFM-415-COMPLETION-RECORD.md  NFM-415-EXECUTION-RECORD.md  NFM-415-FINAL-API-ATTEMPT.md  NFM-415-FINAL-DISPOSITION.md  NFM-415-FINAL-SUMMARY.md  NFM-415-LIVENESS-CONTINUATION-RECORD.md  NFM-415-README.md  NFM-416-CPO-PRODUCTIVITY-REVIEW.md  NFM-416-FINAL-DISPOSITION.md  NFM-416-HEARTBEAT-COMPLETION.md  NFM-428-COMPLETION-RECORD.md  NFM-428-Q2-REVIEW-Q3-STRATEGY.md  (+14 more)
apps/api/: .env.example  .env.production.example  coverage.json  coverage.xml  pyproject.toml  run-performance-test.sh
apps/api/.serena/: project.yml
apps/api/alembic_migrations/: 20250621_0003_create_hpc_failover_events.py  20250628_0004_add_staging_v4_fields.py
apps/api/content/blog/: post-0-1781755740.md  post-0-1781802308.md  post-0-1782007067.md  post-0-1782165311.md  post-0-1782878092.md  post-1-1781755611.md  post-1-1781811145.md  post-1-1782007067.md  post-1-1782165311.md  post-1-1782878092.md  post-2-1781755611.md  post-2-1781804561.md  post-2-1782007067.md  post-2-1782165311.md  post-2-1782878092.md  test-post-1781755611.md  test-post-1781802308.md  test-post-1782007067.md  test-post-1782165311.md  test-post-1782878091.md  test-post-1782878092.md
apps/api/memory/: nfm685-lead-engineer-guidance.md  nfm685-technical-assessment.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_create_users_table.py  002_create_blog_posts_table.py  003_create_md_verification_tables.py  003_create_potentials_table.py  004_seed_potentials.py  005_add_verification_results_md_and_extend_jobs.py  005_add_verification_status.py  005c_merge_verification_branches.py  006_add_cancelled_status_to_md_jobs.py  007_add_staging_quality_gate_columns.py  008_add_blog_posts_title.py  009_create_phase1_core_tables.py  010_seed_phase1_reference_data.py  011_create_kg_tables.py  012_create_kg_nodes_edges.py  013_add_entity_merge_log.py  013_add_multimodal_job_fields.py  013_extraction_figures.py  013_sync_phase2_schema_drift.py  014_add_user_profile_fields.py  014_conflict_records.py  014_kg_models_complete.py  014_sync_phase2_schema_drift.py  015_add_user_profile_fields.py  015_kg_models_complete.py  016_phase3_review_columns.py  (+16 more)
apps/api/models/: energy_predictor_v1.0_metrics.json  energy_predictor_v1.1_feature_schema.json  energy_predictor_v1.1_metrics.json  energy_predictor_v11.joblib  phase_classifier_v01.joblib  temp_predictor_v1.0.0_report.txt  temp_predictor_v1.1.joblib  temp_predictor_v1.1_metrics.json  temp_predictor_v1.1_report.txt
apps/api/scripts/: bench_ontology_slo.py  celery_worker.py  generate_golden_fixtures.py  security-scan.sh
apps/api/tests/: __init__.py  conftest.py  nvl_conformance.py  ontology_seed.py  seed_entity_pairs.py  test_auth_endpoints.py  test_auth_integration.py  test_auth_middleware.py  test_auth_rbac.py  test_auth_service.py  test_batch_api.py  test_batch_service.py  test_blog_auth.py  test_blog_post_service.py  test_blog_post_service_unit2.py  test_blog_service_integration.py  test_blog_state.py  test_blog_workflow_integration.py  test_celery_app.py  test_celery_beat_monitoring.py  test_celery_config.py  test_conflict_api_unit.py  test_conflict_model.py  test_conflict_resolution.py  test_conflict_resolver.py  test_core_auth.py  test_database.py  test_design_optimization.py  test_dft_import.py  test_doi_fetcher.py  test_doi_pipeline_integration.py  test_domain_expert_schemas.py  test_e2e_extraction.py  test_e2e_full_cycle.py  test_e2e_integration.py  test_energy_features_v11.py  test_energy_predictor_v11_acceptance.py  test_entity_linker.py  test_entity_merge_log_model.py  test_error_responses.py  (+146 more)
apps/mcp-server/: .env.example  .mcp.json.example  README.md  pyproject.toml
apps/mcp-server/docs/: CLAUDE-CODE.md  TOOL-REFERENCE.md
apps/mcp-server/tests/: conftest.py  test_client.py  test_e2e_validation.py  test_embeddings.py  test_extraction_integration.py  test_kg_integration.py  test_knowledge_graph_integration.py  test_materials_integration.py  test_ontology_integration.py  test_server.py  test_sources_invocation.py  test_sources_potentials_integration.py  test_sources_tools.py  test_stdio_integration.py  test_tools.py  test_tools_extraction.py  test_tools_integration.py  test_tools_kg.py  test_tools_materials.py  test_tools_ontology.py  test_tools_potentials.py  test_tools_properties.py  test_tools_sources.py  test_zotero_invocation.py  test_zotero_tools.py
apps/nfm-md-runner/: .env.example  .gitignore  README.md  pyproject.toml
apps/nfm-md-runner/tests/: conftest.py  test_analysis_manager.py  test_cli.py  test_config.py  test_data_averager.py  test_defect_analyzer.py  test_failover_executor.py  test_hpc_adapter.py  test_hpc_credentials.py  test_model_fitter.py  test_slurm_executor.py  test_smoke.py  test_ssh_transport.py  test_uo2_smoke.py
verify-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
verify-service/runners/: ase_runner.py  lammps_runner.py
verify-service/src/verify/: __init__.py  __main__.py  config.py  database.py
verify-service/src/verify_service/: __init__.py  __main__.py  config.py  main.py  supabase.py
verify-service/tests/: test_api.py  test_e2e.py  test_elastic.py  test_grading.py  test_lattice.py  test_properties.py
verify-service/workers/: elastic.py  lattice.py  vacancy.py
(+1312 files in other folders)
