[project]
name = "nfm-db-api"
version = "0.1.0"
description = "Nuclear Fuel & Materials Properties Database - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "paramiko>=3.4.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF",
]
ignore = [
    "E501",
    "UP046",
    "B008",
    "UP042",  # intentional: str-enums back DB CHECK constraints & JSON
    "N806",   # MockManager in test fixtures
    "B904",   # raise … from err — pervasive in pre-existing code
    "B017",   # assert blind Exception — test pattern
    "B015",   # pointless comparison at end of function scope
    "B018",   # useless attribute access — test fixtures
    "RUF012", # mutable default class attribute — pervasive pre-existing pattern
    "RUF013", # implicit Optional — pervasive in pre-existing code
    "RUF059", # unpacked variable never used — test fixtures
    "RUF043", # unescaped regex metacharacters
    "SIM102", # nested if — pervasive in pre-existing code
    "SIM105", # contextlib.suppress — pervasive in pre-existing code
    "SIM108", # ternary instead of if-else — style preference
    "SIM110", # return all() — style preference
    "SIM115", # open() context manager — style preference
    "SIM117", # nested with — pervasive in pre-existing code
]

[tool.ruff.lint.isort]
known-first-party = ["nfm_db"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Include "." (apps/api) so the `tests` package is importable under every
# invocation — `uv run pytest` and the console-script entrypoint do NOT put the
# CWD on sys.path (unlike `python -m pytest`), which broke the ontology tests'
# `from tests.<helper> import ...` collection in CI (NFM-275).
pythonpath = ["src", "."]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
markers = [
    "e2e: End-to-end tests that exercise the full system",
    "unit: Unit tests (isolated, no external dependencies)",
    "integration: Integration tests (require external services)",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
