[project]
name = "nfm-db-api"
version = "0.1.0"
description = "Nuclear Fuel & Materials Properties Database - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "paramiko>=3.4.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-frontmatter>=1.1.0",
    "slowapi>=0.1.9",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.4.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]
lightrag = [
    # Version must match docker/lightrag.Dockerfile ARG LIGHTRAG_VERSION
    # and nfm_db.config.LIGHTRAG_VERSION. Only needed for local dev
    # against a live LightRAG sidecar (not required in production,
    # where the sidecar runs independently).
    "lightrag-hku==1.5.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF",
]
ignore = [
    "E501",
    "UP046",
    "B008",
    "UP042",  # intentional: str-enums back DB CHECK constraints & JSON
    "N806",   # MockManager in test fixtures
    "B904",   # raise … from err — pervasive in pre-existing code
    "B017",   # assert blind Exception — test pattern
    "B015",   # pointless comparison at end of function scope
    "B018",   # useless attribute access — test fixtures
    "RUF012", # mutable default class attribute — pervasive pre-existing pattern
    "RUF013", # implicit Optional — pervasive in pre-existing code
    "RUF059", # unpacked variable never used — test fixtures
    "RUF043", # unescaped regex metacharacters
    "SIM102", # nested if — pervasive in pre-existing code
    "SIM105", # contextlib.suppress — pervasive in pre-existing code
    "SIM108", # ternary instead of if-else — style preference
    "SIM110", # return all() — style preference
    "SIM115", # open() context manager — style preference
    "SIM117", # nested with — pervasive in pre-existing code
]

[tool.ruff.lint.per-file-ignores]
# Chinese fullwidth punctuation is intentional i18n content
"src/nfm_db/api/v1/*.py" = ["RUF001", "RUF002"]
"src/nfm_db/api/v4/*.py" = ["RUF001", "RUF002"]
"src/nfm_db/schemas/errors.py" = ["RUF001", "RUF002"]
"src/nfm_db/services/extraction_prompt.py" = ["RUF001"]
"src/nfm_db/services/extraction_pipeline.py" = ["RUF001", "RUF002", "RUF003"]
# Multiplication sign × is intentional in LaTeX pattern matching
"src/nfm_db/core/extraction_rules.py" = ["RUF001", "RUF002", "RUF003"]
# Greek alpha / Chinese characters in docstrings and test data are intentional
"src/nfm_db/core/phase_rules.py" = ["RUF002"]
"tests/test_extraction_pipeline_integration.py" = ["RUF001", "RUF002"]
"tests/test_extraction_prompt.py" = ["RUF001"]
"tests/test_extraction_rules.py" = ["RUF001", "RUF002"]
"tests/test_phase_rules.py" = ["RUF001", "RUF002"]
"tests/test_v4_mapper.py" = ["RUF001", "RUF002"]
# NFM-1371: pre-existing import ordering issues (import before docstring / unsorted)
"tests/test_auth_service.py" = ["E402", "F811", "I001"]
"tests/test_auth_endpoints.py" = ["E402", "F811", "I001"]
# sys.path manipulation before module import is intentional
"tests/eval/test_accuracy_benchmark.py" = ["E402", "RUF059"]
# Scientific unicode (multiplication sign, Greek rho) in fixtures and test data is intentional
"scripts/generate_golden_fixtures.py" = ["RUF001"]
"src/nfm_db/services/conflict_resolver.py" = ["RUF002"]
"src/nfm_db/services/kg_query_service.py" = ["RUF002"]
"tests/test_kg_query_service.py" = ["RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["nfm_db"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paramiko.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "passlib.context.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytesseract.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nfm_md_runner.*"
ignore_missing_imports = true

# Pre-existing modules with unresolved mypy errors (existed on main before this branch).
# Strict typing deferred to a dedicated cleanup issue.
[[tool.mypy.overrides]]
module = [
    "nfm_db.schemas.potential",
    "nfm_db.models.potential",
    "nfm_db.services.fusion_pipeline",
    "nfm_db.services.conflict_resolution",
    "nfm_db.api.v1.reference_values",
    "nfm_db.api.v1.feedback",
    "nfm_db.api.v1.extraction",
    "nfm_db.api.v1.auth",
    "nfm_db.api.v1.blog",
    "nfm_db.services.verification_service",
    "nfm_db.services.auth_service",
    "nfm_db.services.extraction_pipeline",
    "nfm_db.services.external_data_sources",
    "nfm_db.services.upload_service",
    "nfm_db.services.potential_service",
    "nfm_db.schemas.domain_expert",
    "nfm_db.services.blog_post",
    "nfm_db.models.kg_node",
    "nfm_db.services.multi_source_fusion",
    "nfm_db.services.openkim_mapper",
    "nfm_db.services.providers.openkim",
]
ignore_errors = true

# HPC/monitoring scaffold modules — strict typing added incrementally (NFM-408).
[[tool.mypy.overrides]]
module = [
    "nfm_db.services.hpc_orchestration",
    "nfm_db.services.hpc_file_transfer",
    "nfm_db.services.hpc_job_monitor",
    "nfm_db.services.hpc_failover",
    "nfm_db.services.hpc_metrics",
    "nfm_db.services.hpc_sync",
    "nfm_db.services.hpc_ssh",
    "nfm_db.services.hpc_slurm",
    "nfm_db.services.celery_app",
    "nfm_db.models.hpc_failover_event",
    "nfm_db.services.md_verification",
    "nfm_db.services.md_tasks",
]
ignore_errors = true

# API standardization modules (NFM-1072) — schema/attribute refactoring in progress.
# Strict typing will be restored when schema changes are finalized.
[[tool.mypy.overrides]]
module = [
    "nfm_db.api.v1.kg",
    "nfm_db.api.v1.literature",
    "nfm_db.api.v1.review",
    "nfm_db.api.v1.conflict",
    "nfm_db.api.v1.health",
    "nfm_db.api.v1.materials",
]
ignore_errors = true

# LightRAG/RAG provider services (NFM-1222 stack) — strict typing deferred.
# httpx.AsyncClient.json() returns Any (no-any-return on dict[str, Any] returns)
# and AsyncResult.mappings() await typing varies across sqlalchemy versions.
# Track restoration in a dedicated cleanup issue alongside NFM-1072.
[[tool.mypy.overrides]]
module = [
    "nfm_db.services.lightrag_client",
    "nfm_db.services.rag_provider",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Include "." (apps/api) so the `tests` package is importable under every
# invocation — `uv run pytest` and the console-script entrypoint do NOT put the
# CWD on sys.path (unlike `python -m pytest`), which broke the ontology tests'
# `from tests.<helper> import ...` collection in CI (NFM-275).
pythonpath = ["src", "."]
addopts = "-m 'not integration' --cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
markers = [
    "e2e: End-to-end tests that exercise the full system",
    "unit: Unit tests (isolated, no external dependencies)",
    "integration: Integration tests (require external services)",
    "golden: Golden regression tests",
    "performance: Performance benchmark tests",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

