[project]
name = "nfm-mcp-server"
version = "0.1.0"
description = "NFM MCP Server — Zotero integration + source management tools"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "pyzotero>=1.5.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
nfm-mcp-server = "nfm_mcp.server:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF",
]
ignore = [
    "E501",
    "UP046",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["nfm_mcp"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyzotero.*", "chromadb.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

