[project]
name = "nfm-mcp-server"
version = "0.1.0"
description = "Nuclear Fuel & Materials Properties Database - MCP Server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0,<2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
nfm-mcp-server = "nfm_mcp.server:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["nfm_mcp"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
addopts = "-m 'not integration' --cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
markers = [
    "unit: Unit tests (isolated, no external dependencies)",
    "integration: Integration tests (require external services)",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
