[project]
name = "nfm-mcp-server"
version = "0.1.0"
description = "Nuclear Fuel & Materials Properties Database - MCP Server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0,<2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "nfm-db-api",
]

# ── Sibling monorepo dependency ──────────────────────────────────
# nfm-db-api is installed from the local ../api directory.
# With uv:  `uv pip install -e ../api`  (or uv sync handles it
# automatically when [tool.uv.sources] is present).
# With pip: `pip install -e ../api`
[tool.uv.sources]
nfm-db-api = { path = "../api", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
nfm-mcp-server = "nfm_mcp.server:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["nfm_mcp", "nfm_db"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "nfm_db.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
addopts = "-m 'not integration' --cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
markers = [
    "unit: Unit tests (isolated, no external dependencies)",
    "integration: Integration tests (require external services)",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
