[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfm-md-runner"
version = "0.1.0"
description = "Molecular dynamics verification runner for NFMD potential function validation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CTO", email = "cto@nfmd.org"}
]
keywords = ["molecular-dynamics", "lammps", "verification", "nuclear-materials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

analysis = [
    "ovito>=3.0.0",  # Defect analysis (GPL - internal use only)
]

fitting = [
    "scipy>=1.10.0",
]

hpc = [
    "paramiko>=3.0.0",  # SSH for HPC job submission (Phase 2+ only)
]

[project.urls]
Homepage = "https://github.com/nfmd/nfm-md-runner"
Documentation = "https://nfmd.org/docs/md-runner"
Repository = "https://github.com/nfmd/nfm-md-runner"

[tool.hatch.build.targets.wheel]
packages = ["src/nfm_md_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=nfm_md_runner --cov-report=term-missing --cov-report=html"
markers = [
    "hpc: tests requiring real HPC cluster access (deselected in CI)",
    "integration: tests requiring external dependencies",
    "unit: unit tests with no external dependencies",
    "security: security-focused tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:nfm_md_runner.model_fitter",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
